<resources>
    <string name="app_name">RegistroGT</string>
    <string name="app_ci">Cédula</string>
    <string name="app_nameap">Nombre</string>
    <string name="app_lastName">Apellido</string>
    <string name="app_permission">Permiso</string>
    <string name="app_password">Contraseña</string>
    <string name="app_record">REGISTRO DE USUARIOS</string>
    <string name="Information_User">INFORMACIÓN DEL USUARIO</string>

</resources>