<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarRegistro">

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="34dp"
        android:text="@string/app_record"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!--Imagen de el usuario, round-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileIv"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ca"
        app:civ_border_color="@color/colorGray1"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp"
        tools:ignore="MissingConstraints" />

    <!-- EditText: Cédula-->
    <EditText
        android:id="@+id/cedulaU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileIv"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/app_ci"
        android:inputType="textPersonName|textCapWords"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="TextContrastCheck" />

    <!-- EditText: Firts name-->
    <EditText
        android:id="@+id/nombreU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cedulaU"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/app_nameap"
        android:inputType="textPersonName|textCapWords"
        android:minHeight="48dp"
        android:padding="10dp" />

    <!-- EditText: Password-->
    <EditText
        android:id="@+id/contraseniaU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreU"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Spinner
        android:id="@+id/permisosU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contraseniaU"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/app_permission"
        android:minHeight="48dp"
        android:padding="10dp" />


    <!-- Add record-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_done_white" />




    <!-- Cancel record-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCancelarSave"
        android:backgroundTint="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_clear_24" />

</RelativeLayout>